themes/dissent/static/css/mobile.css
.menu-row-background, .menu-row {
    display: none;
}

.hamburger-menu {
    display: block;
}


.announcement-container {
    top: 0;
}

.short-about-section-container .text {
    max-width: 80%;
}

.ven-bg {
    /* height: 50%; */
    min-height: unset;
	padding-left:5%; padding-right:5%;
}
.ven-bg .text-container { width:90%; max-width: unset;}
.ven-bg .text-container .body p {font-size:1.7em}


.about-header-container .text-container {
    top: 5%;
}

.contained-backgrounded-text {
    min-height: 84px;
}


/* buttons easily clickable on mobile*/
.button button {width:auto; height:2em;font-size:2em;} 
.features-banner-container .feature-banner .description {font-weight:bold;font-size:larger;}

/* Bigger speakers on mobile*/
.featured-speaker .featured-description {width:100% ;padding-bottom:0.5em;	height: 7em;	margin: -8.4em 0 0 0;}
	

.featured-speaker  .featured-description .name {font-size:1.7em}
.featured-speaker  .featured-description .text {font-size:1.2em}
.featured-speaker , .content-Program .featured-speaker { width: 49vw; position: relative;}
.content-Program .featured-speaker .locator { width:50vw}

.page-Home .featured-speaker .locator { margin-bottom:2em;}


.visa-assistance {width:90%}

.background-picture-container {max-height:100%; height: 33vh;} /* for landscape*/
.announcement-container > div {  font-size: 2em !important }
.announcement-container .main {  font-size: 2em !important }


.popup {font-size:3rem;}
.popup .speaker-img-container {height:auto;}
.popup  button.close { right: -15px;top: -15px; }
.popup > div{
	top:3vh;
	left:3vw;
	width:90%;
	height:80%;
	padding:2vh 2vw 2vh 2vw;
}
.popup .bio {	position:absolute ;bottom:5px;;left:5px;right:5px;top:400px;;overflow-y: auto; }

.popup img.speaker-img { width:25vw; max-height:unset; }
.popup .featured-description { font-size:1em; }

button {height:auto;font-size:0.8em;}
.content {	padding-top:120px; }

footer {font-size:1.5em;}
.content-two-columns .left , .content-two-columns .right { display:block; width:100%; font-size:1em; margin-bottom:3em; margin-right:0;}
.content-two-columns .left .contained-backgrounded-text , .content-two-columns .right .contained-backgrounded-text {width:90%}
.content-two-columns .contained-text { text-align:justify; }
.content-two-columns button { font-size:2em; }

.content > .title {position:fixed; top: 0; width:100vw;z-index:1 ; font-size: 3em;}

.cemb, .ftlb {	width: 60%; margin-left:20%; }
.footer .links a {    display:inline-block; margin: 0 0.1em 0 0.1em; }

#purpose_section {	max-width: 35em; }
.short-about-section-container .text {	max-width: 45em; }
.section-title.title { padding-left:0; width: 90%;  margin: 0 auto 0 auto;}
.page-Home .section-title.title { margin-bottom:1em;}

#contact_us_section .section-title.title { width: 100%; }
.contact-right-image {    width: 300px;}
.ftlb { height:200px;}
#contact_us_section .social-container {width:50px;vertical-align: top;float:right;}
.ftlb > img , .cemb > img {margin-left:0;}
#contact_us_section .social .icon { width:2.2em}

